@@ -10,6 +10,8 @@ import com.one.news.util.RestUtil;
 import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Service;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,18 +23,14 @@ public class SearchServiceImpl implements SearchService {
     @Override
     public NewsResultDTO getArticles(String topic, String to, String from) throws JsonProcessingException {
         ObjectMapper mapper = new ObjectMapper();
-        String apiNewsUrl = newsHost + "?" +
-                            "q=" + topic +
-                            "&from=" + from +
-                            "&to=" + to +
-                            "&language=pt" +
-                            "&sortBy=popularity" +
-                            "&apiKey=" + apiKey;
+        var query = URLEncoder.encode(topic, StandardCharsets.UTF_8);
+        String apiNewsUrl = String.format("%s?q=%s&from=%s&to=%s&sortBy=%s&language=%s&apiKey=%s",
+                newsHost, query, from, to, "popularity","pt", apiKey);
         var restResponse = RestUtil.doRequest(apiNewsUrl, null, null, null, HttpMethod.GET, 20000);
         var newsResult = mapper.readValue(restResponse.getBody(), new TypeReference<NewsResultDTO>() {});
         List<ArticleDTO> filteredArticles = newsResult.getArticles().stream()
                 .filter(article -> article.getTitle() != null && !article.getTitle().trim().isEmpty() && !"[Removed]".equals(article.getTitle()))
-                .collect(Collectors.toList());
+                .toList();
         newsResult.setArticles(filteredArticles);
         return newsResult;
     }
